perf: add headless JVM tap benchmark